--- a/.gitignore
+++ b/.gitignore
@@ -82,6 +82,11 @@ fastlane/Preview.html
 fastlane/screenshots/**/*.png
 fastlane/test_output
 
+# Additions
+.idea/
+.DS_Store
+.sync/
+
 # Code Injection
 #
 # After new code Injection tools there's a generated folder /iOSInjectionProject
